crates/tui/tests/storybook/snapshots/app_tool::edit_file_tool_states.expanded.styles.snap
---
source: crates/tui/tests/storybook/app_ctx.rs
expression: frame.styles_text()
---
dim: 84 30
  0   0   1 fg=AnsiValue(8)
  0   1  10 attrs=dim
  2   0   1 fg=AnsiValue(8)
  2   1  10 attrs=dim
  2  73  10 attrs=dim
  4   0   1 fg=AnsiValue(77)
  4   1  10 attrs=dim
  4  73  10 attrs=dim
  5   0   2 bg=Rgb { r: 60, g: 20, b: 20 }
  5   2   3 fg=AnsiValue(244) bg=Rgb { r: 60, g: 20, b: 20 }
  5   5   2 fg=Red bg=Rgb { r: 60, g: 20, b: 20 }
  5   7   2 fg=Rgb { r: 102, g: 217, b: 239 } bg=Rgb { r: 60, g: 20, b: 20 }
  5   9   1 fg=Rgb { r: 248, g: 248, b: 242 } bg=Rgb { r: 60, g: 20, b: 20 }
  5  10   3 fg=Rgb { r: 166, g: 226, b: 46 } bg=Rgb { r: 60, g: 20, b: 20 }
  5  13   1 fg=Rgb { r: 248, g: 248, b: 242 } bg=Rgb { r: 60, g: 20, b: 20 }
  5  14   1 fg=Rgb { r: 253, g: 151, b: 31 } bg=Rgb { r: 60, g: 20, b: 20 }
  5  15   2 fg=Rgb { r: 248, g: 248, b: 242 } bg=Rgb { r: 60, g: 20, b: 20 }
  5  17   1 fg=Rgb { r: 102, g: 217, b: 239 } bg=Rgb { r: 60, g: 20, b: 20 }
  5  18   2 fg=Rgb { r: 102, g: 217, b: 239 } bg=Rgb { r: 110, g: 35, b: 35 }
  5  20   2 fg=Rgb { r: 248, g: 248, b: 242 } bg=Rgb { r: 60, g: 20, b: 20 }
  5  22   1 fg=Rgb { r: 253, g: 151, b: 31 } bg=Rgb { r: 60, g: 20, b: 20 }
  5  23   2 fg=Rgb { r: 248, g: 248, b: 242 } bg=Rgb { r: 60, g: 20, b: 20 }
  5  25   1 fg=Rgb { r: 102, g: 217, b: 239 } bg=Rgb { r: 60, g: 20, b: 20 }
  5  26   2 fg=Rgb { r: 102, g: 217, b: 239 } bg=Rgb { r: 110, g: 35, b: 35 }
  5  28   5 fg=Rgb { r: 248, g: 248, b: 242 } bg=Rgb { r: 60, g: 20, b: 20 }
  5  33   1 fg=Rgb { r: 102, g: 217, b: 239 } bg=Rgb { r: 60, g: 20, b: 20 }
  5  34   2 fg=Rgb { r: 102, g: 217, b: 239 } bg=Rgb { r: 110, g: 35, b: 35 }
  5  36   2 fg=Rgb { r: 248, g: 248, b: 242 } bg=Rgb { r: 60, g: 20, b: 20 }
  5  38  45 bg=Rgb { r: 60, g: 20, b: 20 }
  6   0   2 bg=Rgb { r: 60, g: 20, b: 20 }
  6   2   3 fg=AnsiValue(244) bg=Rgb { r: 60, g: 20, b: 20 }
  6   5   2 fg=Red bg=Rgb { r: 60, g: 20, b: 20 }
  6   7   6 fg=Rgb { r: 248, g: 248, b: 242 } bg=Rgb { r: 110, g: 35, b: 35 }
  6  13   1 fg=Rgb { r: 249, g: 38, b: 114 } bg=Rgb { r: 110, g: 35, b: 35 }
  6  14   2 fg=Rgb { r: 248, g: 248, b: 242 } bg=Rgb { r: 110, g: 35, b: 35 }
  6  16  67 bg=Rgb { r: 60, g: 20, b: 20 }
  7   0   2 bg=Rgb { r: 20, g: 50, b: 20 }
  7   2   3 fg=AnsiValue(244) bg=Rgb { r: 20, g: 50, b: 20 }
  7   5   2 fg=Green bg=Rgb { r: 20, g: 50, b: 20 }
  7   7   2 fg=Rgb { r: 102, g: 217, b: 239 } bg=Rgb { r: 20, g: 50, b: 20 }
  7   9   1 fg=Rgb { r: 248, g: 248, b: 242 } bg=Rgb { r: 20, g: 50, b: 20 }
  7  10   3 fg=Rgb { r: 166, g: 226, b: 46 } bg=Rgb { r: 20, g: 50, b: 20 }
  7  13   1 fg=Rgb { r: 248, g: 248, b: 242 } bg=Rgb { r: 20, g: 50, b: 20 }
  7  14   1 fg=Rgb { r: 253, g: 151, b: 31 } bg=Rgb { r: 20, g: 50, b: 20 }
  7  15   2 fg=Rgb { r: 248, g: 248, b: 242 } bg=Rgb { r: 20, g: 50, b: 20 }
  7  17   1 fg=Rgb { r: 102, g: 217, b: 239 } bg=Rgb { r: 20, g: 50, b: 20 }
  7  18   2 fg=Rgb { r: 102, g: 217, b: 239 } bg=Rgb { r: 35, g: 95, b: 35 }
  7  20   2 fg=Rgb { r: 248, g: 248, b: 242 } bg=Rgb { r: 20, g: 50, b: 20 }
  7  22   1 fg=Rgb { r: 253, g: 151, b: 31 } bg=Rgb { r: 20, g: 50, b: 20 }
  7  23   2 fg=Rgb { r: 248, g: 248, b: 242 } bg=Rgb { r: 20, g: 50, b: 20 }
  7  25   1 fg=Rgb { r: 102, g: 217, b: 239 } bg=Rgb { r: 20, g: 50, b: 20 }
  7  26   2 fg=Rgb { r: 102, g: 217, b: 239 } bg=Rgb { r: 35, g: 95, b: 35 }
  7  28   5 fg=Rgb { r: 248, g: 248, b: 242 } bg=Rgb { r: 20, g: 50, b: 20 }
  7  33   1 fg=Rgb { r: 102, g: 217, b: 239 } bg=Rgb { r: 20, g: 50, b: 20 }
  7  34   2 fg=Rgb { r: 102, g: 217, b: 239 } bg=Rgb { r: 35, g: 95, b: 35 }
  7  36   2 fg=Rgb { r: 248, g: 248, b: 242 } bg=Rgb { r: 20, g: 50, b: 20 }
  7  38  45 bg=Rgb { r: 20, g: 50, b: 20 }
  8   0   2 bg=Rgb { r: 20, g: 50, b: 20 }
  8   2   3 fg=AnsiValue(244) bg=Rgb { r: 20, g: 50, b: 20 }
  8   5   2 fg=Green bg=Rgb { r: 20, g: 50, b: 20 }
  8   7   6 fg=Rgb { r: 248, g: 248, b: 242 } bg=Rgb { r: 35, g: 95, b: 35 }
  8  13  11 fg=Rgb { r: 102, g: 217, b: 239 } bg=Rgb { r: 35, g: 95, b: 35 }
  8  24   4 fg=Rgb { r: 248, g: 248, b: 242 } bg=Rgb { r: 35, g: 95, b: 35 }
  8  28   6 fg=Rgb { r: 102, g: 217, b: 239 } bg=Rgb { r: 35, g: 95, b: 35 }
  8  34   1 fg=Rgb { r: 248, g: 248, b: 242 } bg=Rgb { r: 35, g: 95, b: 35 }
  8  35  10 fg=Rgb { r: 230, g: 219, b: 116 } bg=Rgb { r: 35, g: 95, b: 35 }
  8  45   1 fg=Rgb { r: 248, g: 248, b: 242 } bg=Rgb { r: 35, g: 95, b: 35 }
  8  46  37 bg=Rgb { r: 20, g: 50, b: 20 }
  9   2   3 fg=AnsiValue(244)
  9   7   1 fg=Rgb { r: 248, g: 248, b: 242 }
 11   0   1 fg=AnsiValue(77)
 11   1  10 attrs=dim
 11  73  10 attrs=dim
 12   2   3 fg=AnsiValue(244)
 12   7   4 fg=Rgb { r: 255, g: 255, b: 255 }
 12  11   1 fg=Rgb { r: 248, g: 248, b: 242 }
 12  12   1 fg=Rgb { r: 190, g: 132, b: 255 }
 13   0   2 bg=Rgb { r: 60, g: 20, b: 20 }
 13   2   3 fg=AnsiValue(244) bg=Rgb { r: 60, g: 20, b: 20 }
 13   5   2 fg=Red bg=Rgb { r: 60, g: 20, b: 20 }
 13   7   3 fg=Rgb { r: 255, g: 255, b: 255 } bg=Rgb { r: 60, g: 20, b: 20 }
 13  10   1 fg=Rgb { r: 248, g: 248, b: 242 } bg=Rgb { r: 60, g: 20, b: 20 }
 13  11   4 fg=Rgb { r: 255, g: 255, b: 255 } bg=Rgb { r: 60, g: 20, b: 20 }
 13  15   1 fg=Rgb { r: 248, g: 248, b: 242 } bg=Rgb { r: 60, g: 20, b: 20 }
 13  16   2 fg=Rgb { r: 255, g: 255, b: 255 } bg=Rgb { r: 60, g: 20, b: 20 }
 13  18   1 fg=Rgb { r: 248, g: 248, b: 242 } bg=Rgb { r: 60, g: 20, b: 20 }
 13  19   8 fg=Rgb { r: 255, g: 255, b: 255 } bg=Rgb { r: 60, g: 20, b: 20 }
 13  27   1 fg=Rgb { r: 248, g: 248, b: 242 } bg=Rgb { r: 60, g: 20, b: 20 }
 13  28   3 fg=Rgb { r: 249, g: 38, b: 114 } bg=Rgb { r: 60, g: 20, b: 20 }
 13  31   1 fg=Rgb { r: 248, g: 248, b: 242 } bg=Rgb { r: 60, g: 20, b: 20 }
 13  32   4 fg=Rgb { r: 255, g: 255, b: 255 } bg=Rgb { r: 60, g: 20, b: 20 }
 13  36   1 fg=Rgb { r: 248, g: 248, b: 242 } bg=Rgb { r: 60, g: 20, b: 20 }
 13  37   8 fg=Rgb { r: 255, g: 255, b: 255 } bg=Rgb { r: 60, g: 20, b: 20 }
 13  45   1 fg=Rgb { r: 248, g: 248, b: 242 } bg=Rgb { r: 60, g: 20, b: 20 }
 13  46   3 fg=Rgb { r: 249, g: 38, b: 114 } bg=Rgb { r: 60, g: 20, b: 20 }
 13  49   1 fg=Rgb { r: 248, g: 248, b: 242 } bg=Rgb { r: 60, g: 20, b: 20 }
 13  50   6 fg=Rgb { r: 249, g: 38, b: 114 } bg=Rgb { r: 60, g: 20, b: 20 }
 13  56   1 fg=Rgb { r: 248, g: 248, b: 242 } bg=Rgb { r: 60, g: 20, b: 20 }
 13  57  12 fg=Rgb { r: 255, g: 255, b: 255 } bg=Rgb { r: 60, g: 20, b: 20 }
 13  69   1 fg=Rgb { r: 248, g: 248, b: 242 } bg=Rgb { r: 60, g: 20, b: 20 }
 13  70  13 bg=Rgb { r: 60, g: 20, b: 20 }
 14   0   2 bg=Rgb { r: 20, g: 50, b: 20 }
 14   2   3 fg=AnsiValue(244) bg=Rgb { r: 20, g: 50, b: 20 }
 14   5   2 fg=Green bg=Rgb { r: 20, g: 50, b: 20 }
 14   7   4 fg=Rgb { r: 248, g: 248, b: 242 } bg=Rgb { r: 20, g: 50, b: 20 }
 14  11   4 fg=Rgb { r: 255, g: 255, b: 255 } bg=Rgb { r: 20, g: 50, b: 20 }
 14  15   1 fg=Rgb { r: 248, g: 248, b: 242 } bg=Rgb { r: 20, g: 50, b: 20 }
 14  16   2 fg=Rgb { r: 255, g: 255, b: 255 } bg=Rgb { r: 20, g: 50, b: 20 }
 14  18   1 fg=Rgb { r: 248, g: 248, b: 242 } bg=Rgb { r: 20, g: 50, b: 20 }
 14  19   8 fg=Rgb { r: 255, g: 255, b: 255 } bg=Rgb { r: 20, g: 50, b: 20 }
 14  27   1 fg=Rgb { r: 248, g: 248, b: 242 } bg=Rgb { r: 20, g: 50, b: 20 }
 14  28   3 fg=Rgb { r: 249, g: 38, b: 114 } bg=Rgb { r: 20, g: 50, b: 20 }
 14  31   1 fg=Rgb { r: 248, g: 248, b: 242 } bg=Rgb { r: 20, g: 50, b: 20 }
 14  32   4 fg=Rgb { r: 255, g: 255, b: 255 } bg=Rgb { r: 20, g: 50, b: 20 }
 14  36   1 fg=Rgb { r: 248, g: 248, b: 242 } bg=Rgb { r: 20, g: 50, b: 20 }
 14  37   8 fg=Rgb { r: 255, g: 255, b: 255 } bg=Rgb { r: 20, g: 50, b: 20 }
 14  45   1 fg=Rgb { r: 248, g: 248, b: 242 } bg=Rgb { r: 20, g: 50, b: 20 }
 14  46   3 fg=Rgb { r: 249, g: 38, b: 114 } bg=Rgb { r: 20, g: 50, b: 20 }
 14  49   1 fg=Rgb { r: 248, g: 248, b: 242 } bg=Rgb { r: 20, g: 50, b: 20 }
 14  50   6 fg=Rgb { r: 249, g: 38, b: 114 } bg=Rgb { r: 20, g: 50, b: 20 }
 14  56   1 fg=Rgb { r: 249, g: 38, b: 114 } bg=Rgb { r: 35, g: 95, b: 35 }
 14  57   6 fg=Rgb { r: 255, g: 255, b: 255 } bg=Rgb { r: 35, g: 95, b: 35 }
 14  63   1 fg=Rgb { r: 248, g: 248, b: 242 } bg=Rgb { r: 20, g: 50, b: 20 }
 14  64  12 fg=Rgb { r: 255, g: 255, b: 255 } bg=Rgb { r: 20, g: 50, b: 20 }
 14  76   1 fg=Rgb { r: 248, g: 248, b: 242 } bg=Rgb { r: 20, g: 50, b: 20 }
 14  77   6 bg=Rgb { r: 20, g: 50, b: 20 }
 15   2   3 fg=AnsiValue(244)
 15   7   5 fg=Rgb { r: 248, g: 248, b: 242 }
 15  12   1 fg=Rgb { r: 190, g: 132, b: 255 }
 17   0   1 fg=AnsiValue(9)
 17   1  10 attrs=dim
 17  73  10 attrs=dim
 18   2  34 fg=AnsiValue(9)
 26   0   1 fg=AnsiValue(237)
 26   1   1 fg=Rgb { r: 198, g: 198, b: 198 } attrs=bold
 26   2   1 fg=Rgb { r: 175, g: 175, b: 175 } attrs=bold
 26   3   1 fg=Rgb { r: 157, g: 157, b: 157 } attrs=bold
 26   4   1 fg=Rgb { r: 144, g: 144, b: 144 } attrs=bold
 26   5   1 fg=Rgb { r: 140, g: 140, b: 140 } attrs=bold
 26   6   1 fg=Rgb { r: 144, g: 144, b: 144 } attrs=bold
 26   7   1 fg=Rgb { r: 157, g: 157, b: 157 } attrs=bold
 26   8   1 fg=Rgb { r: 175, g: 175, b: 175 } attrs=bold
 26   9   1 fg=Rgb { r: 198, g: 198, b: 198 } attrs=bold
 26  10   1 fg=Rgb { r: 220, g: 220, b: 220 } attrs=bold
 26  11   1 fg=Rgb { r: 238, g: 238, b: 238 } attrs=bold
 26  13  71 fg=AnsiValue(237)
 27   1   1 fg=Black bg=White
 28   0  84 fg=AnsiValue(237)
 29   0  10 fg=AnsiValue(244) bg=AnsiValue(234)
 29  10  66 bg=AnsiValue(233)
 29  76   8 fg=AnsiValue(244) bg=AnsiValue(233)
