crates/tui/tests/storybook/snapshots/app_tool::edit_notebook_tool_states.collapsed.snap
---
source: crates/tui/tests/storybook/app_ctx.rs
assertion_line: 472
expression: frame.text()
---
* edit_notebook analysis.ipynb
  replaced cell, 2 lines

* edit_notebook analysis.ipynb
  replaced cell, 2 lines

* edit_notebook analysis.ipynb
  inserted cell, 1 lines










─ ✿ working… ───────────────────────────────────────────────────────────────────────

────────────────────────────────────────────────────────────────────────────────────
 ○ normal                                                                   1:1 100%
