crates/tui/tests/storybook/snapshots/app_tool::edit_notebook_tool_states.expanded.snap
---
source: crates/tui/tests/storybook/app_ctx.rs
expression: frame.text()
---
* edit_notebook analysis.ipynb

* edit_notebook analysis.ipynb
   1 - import pandas
   2 - df = pandas.read_csv('data.csv')
   1 + import pandas as pd
   2 + df = pd.read_csv("data.csv")

* edit_notebook analysis.ipynb
   1   print("new cell")








─ ✿ working… ───────────────────────────────────────────────────────────────────────

────────────────────────────────────────────────────────────────────────────────────
 ○ normal                                                                   1:1 100%
