crates/tui/tests/storybook/snapshots/app_tool::enter_worktree_tool_compacted.snap
---
source: crates/tui/tests/storybook/app_ctx.rs
expression: frame.text()
---
* enter_worktree native-worktree-support





─ ✿ working… ─────────────────────────────────────────────────────────────────────────

──────────────────────────────────────────────────────────────────────────────────────
 ○ normal                                                                     1:1 100%
