crates/tui/tests/storybook/snapshots/app_tool::enter_worktree_tool_expanded.snap
---
source: crates/tui/tests/storybook/app_ctx.rs
expression: frame.text()
---
* enter_worktree native-worktree-support
  created
  branch  native-worktree-support
  base    main
  path    /repo/.worktrees/native-worktree-support



─ ✿ working… ─────────────────────────────────────────────────────────────────────────

──────────────────────────────────────────────────────────────────────────────────────
 ○ normal                                                                     1:1 100%
