crates/tui/tests/storybook/snapshots/app_tool::glob_tool_block.snap
---
source: crates/tui/tests/storybook/app_ctx.rs
expression: frame.text()
---
* glob **/*.rs in crates/term
  3 files




─ ✿ working… ───────────────────────────────────────────────

────────────────────────────────────────────────────────────
 ○ normal                                           1:1 100%
