crates/tui/tests/storybook/snapshots/app_tool::glob_tool_block.styles.snap
---
source: crates/tui/tests/storybook/app_ctx.rs
expression: frame.styles_text()
---
dim: 60 10
  0   0   1 fg=AnsiValue(77)
  0   1   6 attrs=dim
  1   2   7 attrs=dim
  6   0  57 fg=AnsiValue(237)
  6  57   1 fg=AnsiValue(244)
  6  59   1 fg=AnsiValue(237)
  7   1   1 fg=Black bg=White
  8   0  60 fg=AnsiValue(237)
  9   0  60 bg=AnsiValue(233)
